<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashBackground"
    tools:context="com.michaelRunzler.ARK.android.MainActivity">


    <RelativeLayout
        android:id="@+id/splash_logo_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/splash_progress_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/splash_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/splash_title"
            android:textAppearance="?android:textAppearanceLarge" />

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/contentDesc_splash_logo"
            android:src="@drawable/company_logo_128px" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/splash_progress_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_logo_container">

        <TextView
            android:id="@+id/splash_progress_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/splash_progress_desc"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/splash_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splash_progress_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:max="1000" />

        <TextView
            android:id="@+id/splash_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splash_progress_bar"
            android:layout_centerHorizontal="true"
            android:text="@string/splash_copyright"
            android:textColor="@android:color/black"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/splash_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splash_copyright"
            android:layout_centerHorizontal="true"
            android:text="@string/splash_version"
            android:textSize="10sp" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
