<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:id="@+id/main_sidebar_container"
    android:layout_width="60dp"
    android:layout_height="0dp"
    android:background="@color/mainSidebarBackground"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageButton
        android:id="@+id/main_sidebar_menu_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:background="@drawable/menu_button"
        android:contentDescription="@string/contentDesc_main_sidebar_menu_button"
        android:onClick="activateMenuSlideout"/>

    <ImageButton
        android:id="@+id/main_sidebar_settings_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/main_sidebar_menu_button"
        android:layout_below="@+id/main_sidebar_menu_button"
        android:layout_marginTop="8dp"
        android:background="@drawable/settings_button"
        android:contentDescription="@string/contentDesc_main_sidebar_settings_button"
        android:onClick="showSettings" />

    <ImageButton
        android:id="@+id/main_sidebar_help_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/main_sidebar_settings_button"
        android:layout_below="@+id/main_sidebar_settings_button"
        android:layout_marginTop="8dp"
        android:background="@drawable/help_button"
        android:contentDescription="@string/contentDesc_main_sidebar_help_button"
        android:onClick="showMainHelp"/>

</RelativeLayout>

</android.support.constraint.ConstraintLayout>